# id-siber-index

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  TODO.md  audit.toml  deny.toml  docker-compose.override.yml.example  docker-compose.yml
.github/: CODEOWNERS  pull_request_template.md
.github/issue_templates/: bug_report.md  crawler_bug.md  incident_report.md  schema_proposal.md
.github/workflows/: ci.yml  release.yml
crates/api/: Cargo.toml
crates/api/src/: error.rs  lib.rs  server.rs
crates/api/src/handlers/: incident.rs  mod.rs  search.rs  stats.rs
crates/api/src/middleware/: auth.rs  cors.rs  logging.rs  mod.rs  rate_limit.rs
crates/api/src/routes/: health.rs  incident.rs  mod.rs  search.rs  stats.rs
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs  main.rs
crates/cli/src/commands/: crawl.rs  db.rs  export.rs  import.rs  mod.rs  review.rs  search.rs  serve.rs
crates/crawler/: Cargo.toml
crates/crawler/src/: incident_draft.rs  lib.rs  normalizer.rs  rate_limiter.rs  scheduler.rs
crates/crawler/src/extractors/: html.rs  mod.rs
crates/crawler/src/sources/: bssn.rs  bssn_tests.rs  idx.rs  idx_tests.rs  media.rs  media_tests.rs  mod.rs  ojk.rs  ojk_tests.rs
crates/migrate/: Cargo.toml
crates/migrate/src/: lib.rs  main.rs
crates/migrate/src/migrations/: m20240406_000001_create_incidents_table.rs  m20240406_000002_add_enum_types.rs  m20240407_000003_add_pg_trgm_extension.rs  mod.rs
crates/schema/: Cargo.toml
crates/schema/src/: enums.rs  lib.rs  validation.rs
crates/schema/src/entities/: incident.rs  mod.rs
crates/schema/src/models/: incident.rs  mod.rs
data/: LICENSE  init.sql
migrations/: 0001_add_incidents_sector_updated_indexes.sql
nlp/: Dockerfile  README.md  pyproject.toml
nlp/enrichment/: __init__.py  classifier.py  entity_extractor.py  language_detector.py  text_processor.py
nlp/src/id_siber_nlp/: __init__.py
schema/: README.md  incident.json
scripts/: dev-setup.sh
