[workspace]
resolver = "2"
members = [
    "crates/schema",
    "crates/crawler",
    "crates/api",
    "crates/migrate",
    "crates/cli",
]

[workspace.package]
version = "0.0.1"
authors = ["id-siber-index contributors"]
edition = "2024"
rust-version = "1.94"
license = "AGPL-3.0"
homepage = "https://github.com/id-siber-index/id-siber-index"
repository = "https://github.com/id-siber-index/id-siber-index"
description = "Indonesia Cybersecurity Incident Index"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.42", features = ["full"] }
tokio-util = "0.7"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"], default-features = false }
sea-orm = { version = "1.1", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "with-chrono", "with-json", "with-uuid"], default-features = false }
sea-orm-migration = "1.1"
regex = "1.11"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
hyper = { version = "1.5", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.11", features = ["v4", "serde"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
config = "0.14"
dotenvy = "0.15"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Testing
mockall = "0.13"

# Search
meilisearch-sdk = "0.27"

# Web scraping
html5ever = "0.39"
html2text = "0.13"

# Rate limiting
governor = "0.7"

# Async utilities
futures = "0.3"
async-trait = "0.1"

# Metrics
metrics = "0.24"
metrics-exporter-prometheus = "0.15"

[profile.dev]
debug = true
opt-level = 0

[profile.release]
debug = false
lto = true
codegen-units = 1
panic = "abort"

[profile.test]
debug = true
