[package]
name = "crawler"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Web crawler and data extraction for id-siber-index"

[dependencies]
schema = { path = "../schema" }
tokio = { workspace = true }
reqwest = { workspace = true }
html5ever = { workspace = true }
html2text = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
config = { workspace = true }
governor = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
regex = "1.10"
scraper = "0.19"
url = "2.5"

[dev-dependencies]
mockall = { workspace = true }
tokio-test = "0.4"
futures = "0.3"
