[package]
name = "schema"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Data schema and models for id-siber-index"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
sea-orm = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
